# funke-machine

./: .gitignore  NOTES.md  README.md  main.c
avahi/: Makefile  avahi_client.c
dacp/: Makefile  Makefile.am  README.md  configure.ac
dacpd/: Makefile.am  README.md  configure.ac  dacpd.c  dacpd.service
dbus/: README.md  example
gpiod/: Makefile.am  README.md  configure.ac  gpiod.c  gpiod.service
images/: buttons.vsdx  overview.xml
ipc/: Makefile  README.md  ipc  ipc.c  ipc.h
